# compatibility

./: .env.example  .gitignore  Dockerfile.coordinator  Dockerfile.enclave  QUICKSTART.md  README.md  RESEARCH.md  conversations_A.json  conversations_B.json  docker-compose.yml  pyproject.toml
coordinator/: config.py  main.py  redis_client.py
coordinator/routes/: rooms.py
coordinator_service/: __init__.py  main.py  redis_client.py
coordinator_service/routes/: __init__.py  rooms.py
enclave/: __init__.py  conversation_parser.py  evaluator.py  main.py  openai_client.py  secure_storage.py
enclave_service/: config.py  evaluator.py  main.py  openai_client.py
scripts/: README.md  test_real_e2e.py
shared/: __init__.py  schemas.py
tests/: __init__.py  test_e2e.py  test_mock_e2e.py  test_real_e2e.py
web/: README.md
web/app/: page.tsx
web/app/api/default-conversations/: route.ts
web/app/room/[roomId]/: page.tsx
web/components/: log-console.tsx
web/lib/: api-client.ts
